--- a/src/components/Todos/Todos.css
+++ b/src/components/Todos/Todos.css
@@ -1,3 +1,16 @@
 .todo-cards .row {
     align-items: center;
 }
+.loading-state .spinner-border {
+    left: 50%;
+    top: 50%;
+    text-align: center;
+    position: absolute;
+}
+
+.date-text {
+    border-style: solid;
+    border-width: 1px;
+    padding: 3px;
+    
+}
